# learnFEM

./: .gitignore  README.md  pyproject.toml  single_element_fem.ipynb
