[project]
name = "learnfem"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=7.1.0",
    "jupyter-server-proxy>=4.4.0",
    "matplotlib>=3.10.7",
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "pyvista[all,trame]>=0.46.4",
    "scikit-learn>=1.7.2",
    "sympy>=1.14.0",
]
